--- a/DoyProject/WebContent/WEB-INF/web.xml
+++ b/DoyProject/WebContent/WEB-INF/web.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+
+<!-- Servlets 2.4 and JSP 2.0 (Tomcat 5, Resin 3, and so on) -->
+<!-- <web-app 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 			xmlns="http://java.sun.com/xml/ns/j2ee" 
 			xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 			xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" 
 			version="2.4">
 
+</web-app> -->
+
+<!-- Servlets 2.5 and JSP 2.1(Tomcat 6, and so on) QUESTA E' QUELLA CHE USEREMO -->
+<web-app 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+			xmlns="http://java.sun.com/xml/ns/javaee" 
+			xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+			xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+			version="2.5">
 </web-app>
+
+<!--  Servlets 3.0 and JSP 2.1 (Tomcat 7, and so on) -->
+<!-- <web-app xmlns="http://java.sun.com/xml/ns/javaee" -->
+<!--       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" -->
+<!--       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" -->
+<!--       version="3.0"> -->
+<!--     rest of declarations go here -->
+
+<!-- </web-app> -->
