--- a/DoyProject/WebContent/WEB-INF/web.xml
+++ b/DoyProject/WebContent/WEB-INF/web.xml
@@ -15,6 +15,18 @@
 			xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 			xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 			version="2.5">
+			
+	<welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>login.html</welcome-file>
+    <welcome-file>login.htm</welcome-file>
+    <welcome-file>login.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
 
 <!--  Servlets 3.0 and JSP 2.1 (Tomcat 7, and so on) -->
