--- a/DoyProject/WebContent/WEB-INF/web.xml
+++ b/DoyProject/WebContent/WEB-INF/web.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!-- Servlets 2.4 and JSP 2.0 (Tomcat 5, Resin 3, and so on) -->
 <!-- <web-app 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 			xmlns="http://java.sun.com/xml/ns/j2ee" 
@@ -8,15 +7,13 @@
 			version="2.4">
 
 </web-app> -->
-
 <!-- Servlets 2.5 and JSP 2.1(Tomcat 6, and so on) QUESTA E' QUELLA CHE USEREMO -->
 <web-app 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 			xmlns="http://java.sun.com/xml/ns/javaee" 
-			xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+			xmlns:web="http://java.sun.com/xml/ns/javaee" 
 			xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
 			version="2.5">
-			
-	<welcome-file-list>
+  <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -28,12 +25,10 @@
     <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
-
 <!--  Servlets 3.0 and JSP 2.1 (Tomcat 7, and so on) -->
 <!-- <web-app xmlns="http://java.sun.com/xml/ns/javaee" -->
 <!--       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" -->
 <!--       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" -->
 <!--       version="3.0"> -->
 <!--     rest of declarations go here -->
-
 <!-- </web-app> -->
