User.java and web.xml (very very minor changes)
User.java: Messo a posto un errore in User.java che nell'atto
dell'iscrione di un dottore inseriva la stringa "NULL" nel database per
i reparti non specificati. Tale stringa "NULL" veniva contata come
reparto e restituita nella pagina del profilo del dottore. Il parametro
da settare è stato cambiato da "NULL" (stringa) a null come valore non
esistente.

Web.xml: Inserito il mapping della servlet

--- a/DoyProject/WebContent/WEB-INF/web.xml
+++ b/DoyProject/WebContent/WEB-INF/web.xml
@@ -18,6 +18,13 @@
 		<location>/WEB-INF/Err404.jsp</location>
 	</error-page>
 
+	<servlet>
+		<description></description>
+		<display-name>ControllerServlet</display-name>
+		<servlet-name>ControllerServlet</servlet-name>
+		<servlet-class>controller.ControllerServlet</servlet-class>
+	</servlet>
+
 	<jsp-config>
 		<jsp-property-group>
 			<url-pattern>*.jsp</url-pattern>
